# nfsw-detector

./: .env.dist  README.md  docker-compose.yaml  pyproject.toml
deploy/nsfw_detector/: Dockerfile  api_entrypoint.sh
src/nsfw_detector/: __main__.py  web.py
src/nsfw_detector/application/common/errors/: images.py
src/nsfw_detector/application/common/ports/images/: query_gateway.py
src/nsfw_detector/application/queries/images/: check_image_is_nsfw.py  view_models.py
src/nsfw_detector/infrastructure/adapters/images/: cached_query_gateway.py  gen_ai_query_gateway.py  nsfw_detector_query_gateway.py
src/nsfw_detector/infrastructure/cache/: base.py  impl.py  providers.py
src/nsfw_detector/infrastructure/clients/http/: base.py  impl.py  providers.py
src/nsfw_detector/infrastructure/errors/: base.py  http.py
src/nsfw_detector/presentation/http/common/: exception_handlers.py
src/nsfw_detector/presentation/http/common/routes/: index.py
src/nsfw_detector/presentation/http/v1/routes/images/: __init__.py
src/nsfw_detector/presentation/http/v1/routes/images/check_image_nsfw/: handler.py  schemas.py
src/nsfw_detector/setup/: bootstrap.py  configs.py  ioc.py
