[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.dynamic]
version = { attr = "nsfw_detector.__version__" }

[project]
name = "nsfw_detector"
dynamic = ["version"]
description = "FastAPI service for checking nsfw content in images"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Danil Kovalev", email = "dan.kovalev2013@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.12.13",
    "dishka>=1.6.0",
    "fastapi>=0.115.14",
    "nsfw-image-detector>=0.1.2",
    "orjson>=3.10.18",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
test = [
    "coverage[toml]==7.8.2",
    "pytest==8.4.0",
    "pytest-asyncio==0.26.0",
    "httpx==0.28.1",
]
lint = [
    "ruff==0.11.13",
    "bandit==1.8.3",
    "codespell==2.4.1",
    "mypy==1.16.0",
    "basedpyright==1.29.2"
]

dev = [
    "nsfw_detector[test,lint]",
    "pre-commit==4.2.0",
    "detect-secrets==1.5.0",
]

[tool.pytest.ini_options]
xfail_strict = true
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = ["value_objects"]

[tool.basedpyright]
include = ["src", "tests"]
ignore = ["**/__pycache__", "**/alembic"]
pythonVersion = "3.10"
reportAny = false
reportUnusedCallResult = false

[tool.mypy]
mypy_path = "src"
files = ["src"]
python_version = "3.12"
exclude=[
    "src/nsfw_detector/presentation/http/v1/common/schemes/meta.py",
    "src/nsfw_detector/setup/configs/settings.py"
]

strict = true
pretty = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
allow_redefinition = true
allow_untyped_calls = true
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_decorators = false
show_error_codes = true
show_error_context = true
show_column_numbers = true
check_untyped_defs = true
namespace_packages = true
ignore_missing_imports = true

[tool.ruff]
src = ["src"]
include = ["src/**.py", "tests/**.py"]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "CPY001", "A005"]

[tool.ruff.lint.per-file-ignores]
"src/nsfw_detector/infrastructure/persistence/alembic/**" = ["ERA001", "INP001"]
"tests/**" = ["S101"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]
no-lines-before = ["local-folder"]

[tool.coverage.run]
parallel = true
branch = true
concurrency = ["thread", "multiprocessing"]
source = ["src", "tests"]
omit = ["**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_also = [
    'if TYPE_CHECKING:',
    "if __name__ == .__main__.:",
    '@(abc\.)?abstractmethod',
    "raise NotImplementedError",
    "pass",
    '\.\.\.',
]
omit = [
    'src/nsfw_detector/infrastructure/persistence/adapters/*.py',
    'src/nsfw_detector/infrastructure/persistence/alembic/env.py',
    '*/__init__.py',
]

[tool.semgrep]
paths = ["src"]
include = ["src"]

[tool.bandit]
targets = "src"

[tool.codespell]
skip = "*.pyi,*.pyc,./site"
